--- a/become-a-host/preview.html
+++ b/become-a-host/preview.html
@@ -106,7 +106,7 @@
                     </div>
                   </div>
                   <div class="_fwc96">
-                    <div class="_5kaapu">
+                    <div class="flex-items-center">
                       <div class="_1w3zdzk">
                         <button
                           class="_o0rqv1"
@@ -273,7 +273,7 @@
                                 <div class="_p42ifwp">
                                   <h2 class="_1o8huzpo">Amenities</h2>
                                   <ul class="_6oxhmf">
-                                    <li class="_1qbrhv4">
+                                    <li class="flex-items-center-content-between">
                                       <div>Pool</div>
                                       <svg
                                         viewBox="0 0 32 32"
@@ -295,7 +295,7 @@
                                     </li>
                                   </ul>
                                   <ul class="_6oxhmf">
-                                    <li class="_1qbrhv4">
+                                    <li class="flex-items-center-content-between">
                                       <div>Hot tub</div>
                                       <svg
                                         viewBox="0 0 32 32"
@@ -317,7 +317,7 @@
                                     </li>
                                   </ul>
                                   <ul class="_6oxhmf">
-                                    <li class="_1qbrhv4">
+                                    <li class="flex-items-center-content-between">
                                       <div>BBQ grill</div>
                                       <svg
                                         viewBox="0 0 32 32"
@@ -339,7 +339,7 @@
                                     </li>
                                   </ul>
                                   <ul class="_6oxhmf">
-                                    <li class="_1qbrhv4">
+                                    <li class="flex-items-center-content-between">
                                       <div>Exercise equipment</div>
                                       <svg
                                         viewBox="0 0 32 32"
@@ -361,7 +361,7 @@
                                     </li>
                                   </ul>
                                   <ul class="_6oxhmf">
-                                    <li class="_1qbrhv4">
+                                    <li class="flex-items-center-content-between">
                                       <div>Wifi</div>
                                       <svg
                                         viewBox="0 0 32 32"
@@ -383,7 +383,7 @@
                                     </li>
                                   </ul>
                                   <ul class="_6oxhmf">
-                                    <li class="_1qbrhv4">
+                                    <li class="flex-items-center-content-between">
                                       <div class="_a7a5sx">+6 more</div>
                                     </li>
                                   </ul>
