--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -47,7 +47,7 @@
                         <button class="_bzfhend" type="button">
                           <span class="_vwled5" aria-hidden="true"
                             ><div class="d-flex">
-                              <div class="_rqfxvmb">
+                              <div class="flex-item">
                                 <div style="margin-right: 0">
                                   <svg
                                     viewBox="0 0 1000 1000"
@@ -67,7 +67,7 @@
                                   </svg>
                                 </div>
                               </div>
-                              <div class="_rqfxvmb">
+                              <div class="flex-item">
                                 <div></div>
                               </div></div></span
                           ><span class="a8jt5op dir dir-ltr"
@@ -186,7 +186,7 @@
                       >
                         July 2022
                       </div>
-                      <div class="_1qbrhv4">
+                      <div class="flex-items-center-content-between">
                         <div class="_8kak1d">
                           <div class="_1apusbw">
                             <button
@@ -326,8 +326,8 @@
                           <div class="_1gqqqzz"><div></div></div>
                         </div>
                       </div>
-                      <div class="_1qbrhv4">
-                        <div class="_5kaapu">
+                      <div class="flex-items-center-content-between">
+                        <div class="flex-items-center">
                           <div class="_187cqntx">
                             <div class="_rdptrd">
                               <div class="_r04ms0">
@@ -521,7 +521,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -554,7 +554,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -675,7 +675,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -708,7 +708,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -823,7 +823,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -856,7 +856,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -4018,7 +4018,7 @@
                           <ul class="_1i2zmuz">
                             <li>
                               <div class="_kw9uzc">
-                                <div class="_5kaapu">
+                                <div class="flex-items-center">
                                   <span aria-hidden="true"
                                     ><div class="_9jzho9">
                                       <svg
@@ -4044,7 +4044,7 @@
                             </li>
                             <li>
                               <div class="_kw9uzc">
-                                <div class="_5kaapu">
+                                <div class="flex-items-center">
                                   <span aria-hidden="true"
                                     ><div class="_9jzho9">
                                       <svg
