--- a/calendar_week.html
+++ b/calendar_week.html
@@ -48,7 +48,7 @@
                         <button class="_bzfhend" type="button">
                           <span class="_vwled5" aria-hidden="true"
                             ><div class="d-flex">
-                              <div class="_rqfxvmb">
+                              <div class="flex-item">
                                 <div style="margin-right: 0">
                                   <svg
                                     viewBox="0 0 1000 1000"
@@ -68,7 +68,7 @@
                                   </svg>
                                 </div>
                               </div>
-                              <div class="_rqfxvmb">
+                              <div class="flex-item">
                                 <div></div>
                               </div></div></span
                           ><span class="a8jt5op dir dir-ltr"
@@ -184,7 +184,7 @@
                       >
                         July 2022
                       </div>
-                      <div class="_1qbrhv4">
+                      <div class="flex-items-center-content-between">
                         <div class="_8kak1d">
                           <div class="_1apusbw">
                             <button
@@ -324,8 +324,8 @@
                           <div class="_1gqqqzz"><div></div></div>
                         </div>
                       </div>
-                      <div class="_1qbrhv4">
-                        <div class="_5kaapu">
+                      <div class="flex-items-center-content-between">
+                        <div class="flex-items-center">
                           <div class="_187cqntx">
                             <div class="_rdptrd">
                               <div class="_r04ms0">
@@ -519,7 +519,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -552,7 +552,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -673,7 +673,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -706,7 +706,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -821,7 +821,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -854,7 +854,7 @@
                                             role="menuitem"
                                             aria-busy="false"
                                           >
-                                            <div class="_5kaapu">
+                                            <div class="flex-items-center">
                                               <svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -3059,7 +3059,7 @@
                                       <div class="_qkevs2">
                                         Cooking Deep Fried Bright...
                                       </div>
-                                      <span class="_5kaapu"
+                                      <span class="flex-items-center"
                                         ><svg
                                           width="12"
                                           height="12"
@@ -3119,7 +3119,7 @@
                                       <div class="_qkevs2">
                                         Cooking Deep Fried Bright...
                                       </div>
-                                      <span class="_5kaapu"
+                                      <span class="flex-items-center"
                                         ><svg
                                           width="12"
                                           height="12"
