--- a/contact-host.html
+++ b/contact-host.html
@@ -2160,7 +2160,7 @@
                                                       data-plugin-in-point-id="BOOK_IT_SIDEBAR"
                                                       data-section-id="BOOK_IT_SIDEBAR"
                                                     >
-                                                      <div class="_zjunba">
+                                                      <div class="flex-content-between">
                                                         <div>
                                                           <div>
                                                             <div
