--- a/covidsafety.html
+++ b/covidsafety.html
@@ -130,7 +130,7 @@
                                 data-veloute="marketing_section_landing_page_entry_card"
                               >
                                 <div class="_1x9rd38">
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <a
                                         href="/resources/hosting-homes/a/answers-for-travelers-about-covid-19-153"
@@ -211,7 +211,7 @@
                                       >
                                     </div>
                                   </div>
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <a
                                         href="https://apply.joinsherpa.com/travel-restrictions?affiliateid=airbnb"
@@ -311,7 +311,7 @@
                                 data-veloute="marketing_section_landing_page_entry_card"
                               >
                                 <div class="_1x9rd38">
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <a
                                         href="/help/article/2728/cancellation-options-due-to-covid19"
@@ -391,7 +391,7 @@
                                       >
                                     </div>
                                   </div>
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <a
                                         href="/help/article/3043/search-for-more-flexible-cancellation-policies"
@@ -1906,7 +1906,7 @@
                                 data-veloute="marketing_section_landing_page_text_column"
                               >
                                 <div class="_1x9rd38">
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <div data-nosnippet="true">
                                         <section>
@@ -1934,7 +1934,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <div data-nosnippet="true">
                                         <section>
@@ -1961,7 +1961,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_bc4egv">
+                                  <div class="flex-1">
                                     <div class="_13rz9t0">
                                       <div data-nosnippet="true">
                                         <section>
@@ -2340,7 +2340,7 @@
                               </ul>
                             </div>
                           </div>
-                          <div class="_1sv27e6">
+                          <div class="flex-content-center">
                             <div class="_pd8gea">
                               <div class="_wjo0ey">
                                 <div class="footer__copyright-text" dir="ltr">
