--- a/dashboard.html
+++ b/dashboard.html
@@ -134,7 +134,7 @@
         display: -webkit-flex !important;
         display: flex !important;
       }
-      ._rqfxvmb {
+      .flex-item {
         -ms-grid-row-align: center !important;
         -ms-flex-item-align: center !important;
         display: -webkit-inline-box !important;
@@ -988,7 +988,7 @@
       ._xh0r19 {
         margin-left: 32px !important;
       }
-      ._1sv27e6 {
+      .flex-content-center {
         -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
         display: -webkit-box !important;
@@ -2350,7 +2350,7 @@
                         <button class="_bzfhend" type="button">
                           <span class="_vwled5" aria-hidden="true"
                             ><div class="d-flex">
-                              <div class="_rqfxvmb">
+                              <div class="flex-item">
                                 <div style="margin-right: 0px">
                                   <svg
                                     viewBox="0 0 1000 1000"
@@ -2370,7 +2370,7 @@
                                   </svg>
                                 </div>
                               </div>
-                              <div class="_rqfxvmb">
+                              <div class="flex-item">
                                 <div></div>
                               </div></div></span
                           ><span class="a8jt5op dir dir-ltr"
@@ -3478,7 +3478,7 @@
                             </ul>
                           </div>
                         </div>
-                        <div class="_1sv27e6">
+                        <div class="flex-content-center">
                           <div class="_pd8gea">
                             <div class="_wjo0ey">
                               <div class="footer__copyright-text" dir="ltr">
