--- a/edit/photos.html
+++ b/edit/photos.html
@@ -1756,7 +1756,7 @@
                               >
                                 <section>
                                   <div class="_4gelgl">
-                                    <div class="_zjunba">
+                                    <div class="flex-content-between">
                                       <h2
                                         tabindex="-1"
                                         class="heading"
