--- a/edit/what.html
+++ b/edit/what.html
@@ -661,7 +661,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                       >
                                         <fieldset class="_25bp3z">
                                           <legend class="_1wjt7fx">
-                                            <span class="_5kaapu"
+                                            <span class="flex-items-center"
                                               ><span class="ll4r2nl dir dir-ltr"
                                                 >Where will you broadcast
                                                 from?</span
