--- a/insights.html
+++ b/insights.html
@@ -48,7 +48,7 @@
                         <button class="_bzfhend" type="button">
                           <span class="_vwled5" aria-hidden="true"
                             ><div class="d-flex">
-                              <div class="_rqfxvmb">
+                              <div class="flex-item">
                                 <div style="margin-right: 0">
                                   <svg
                                     viewBox="0 0 1000 1000"
@@ -68,7 +68,7 @@
                                   </svg>
                                 </div>
                               </div>
-                              <div class="_rqfxvmb">
+                              <div class="flex-item">
                                 <div></div>
                               </div></div></span
                           ><span class="a8jt5op dir dir-ltr"
@@ -232,7 +232,7 @@
                                       >filters</span
                                     >
                                   </div>
-                                  <div class="_5kaapu">
+                                  <div class="flex-items-center">
                                     <div class="_sb2tj">
                                       <button
                                         class="_1jw0pctt"
@@ -2022,7 +2022,7 @@
                             </ul>
                           </div>
                         </div>
-                        <div class="_1sv27e6">
+                        <div class="flex-content-center">
                           <div class="_pd8gea">
                             <div class="_wjo0ey">
                               <div class="footer__copyright-text" dir="ltr">
