--- a/notifications.html
+++ b/notifications.html
@@ -339,7 +339,7 @@
                                             aria-label="All conversations in your guest inbox; Selected Filter"
                                             theme="[object Object]"
                                           >
-                                            <div class="_ojs7nk">
+                                            <div class="flex-1-auto">
                                               All conversations
                                             </div>
                                           </button>
@@ -351,7 +351,7 @@
                                             aria-label="Archived conversations in your guest inbox (0 conversations)"
                                             theme="[object Object]"
                                           >
-                                            <div class="_ojs7nk">
+                                            <div class="flex-1-auto">
                                               Archived conversations (0)
                                             </div>
                                           </button>
@@ -363,7 +363,7 @@
                                             aria-label="Unread conversations in your guest inbox (1 conversation)"
                                             theme="[object Object]"
                                           >
-                                            <div class="_ojs7nk">
+                                            <div class="flex-1-auto">
                                               Unread conversations (1)
                                             </div>
                                           </button>
