--- a/payment.html
+++ b/payment.html
@@ -452,7 +452,7 @@
                                                     ><div class="_ranq7o">
                                                       <div class="w-100">
                                                         <div class="_1rbjsj">
-                                                          <div class="_zjunba">
+                                                          <div class="flex-content-between">
                                                             Pay in full
                                                             <div>
                                                               ₱16,711.83
@@ -479,7 +479,7 @@
                                                     ><div class="_ranq7o">
                                                       <div class="w-100">
                                                         <div class="_1rbjsj">
-                                                          <div class="_zjunba">
+                                                          <div class="flex-content-between">
                                                             Pay part now, part
                                                             later
                                                             <div>₱9,389.62</div>
@@ -1160,7 +1160,7 @@
                                                           >
                                                         </div>
                                                       </div>
-                                                      <div class="_5kaapu">
+                                                      <div class="flex-items-center">
                                                         <span class="_a7a5sx"
                                                           >•</span
                                                         ><span class="_15nqexk"
@@ -1605,7 +1605,7 @@
                                             </ul>
                                           </div>
                                         </div>
-                                        <div class="_1sv27e6">
+                                        <div class="flex-content-center">
                                           <div class="_pd8gea">
                                             <div class="_wjo0ey">
                                               <div
