--- a/payments/payout-methods.html
+++ b/payments/payout-methods.html
@@ -421,7 +421,7 @@
                                                   <a
                                                     href="/help/article/425/when-youll-get-your-payout"
                                                     class="_itxk95j"
-                                                    ><div class="_zjunba">
+                                                    ><div class="flex-content-between">
                                                       When you'll get your
                                                       payout<svg
                                                         viewBox="0 0 32 32"
@@ -458,7 +458,7 @@
                                                   <a
                                                     href="/help/topic/1454/how-payouts-work"
                                                     class="_itxk95j"
-                                                    ><div class="_zjunba">
+                                                    ><div class="flex-content-between">
                                                       How payouts work<svg
                                                         viewBox="0 0 32 32"
                                                         xmlns="http://www.w3.org/2000/svg"
@@ -494,7 +494,7 @@
                                                   <a
                                                     href="/users/transaction_history"
                                                     class="_itxk95j"
-                                                    ><div class="_zjunba">
+                                                    ><div class="flex-content-between">
                                                       Go to your transaction
                                                       history<svg
                                                         viewBox="0 0 32 32"
@@ -989,7 +989,7 @@
                                                 <a
                                                   href="/help/article/425/when-youll-get-your-payout"
                                                   class="_itxk95j"
-                                                  ><div class="_zjunba">
+                                                  ><div class="flex-content-between">
                                                     When you'll get your
                                                     payout<svg
                                                       viewBox="0 0 32 32"
@@ -1026,7 +1026,7 @@
                                                 <a
                                                   href="/help/topic/1454/how-payouts-work"
                                                   class="_itxk95j"
-                                                  ><div class="_zjunba">
+                                                  ><div class="flex-content-between">
                                                     How payouts work<svg
                                                       viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
@@ -1062,7 +1062,7 @@
                                                 <a
                                                   href="/users/transaction_history"
                                                   class="_itxk95j"
-                                                  ><div class="_zjunba">
+                                                  ><div class="flex-content-between">
                                                     Go to your transaction
                                                     history<svg
                                                       viewBox="0 0 32 32"
@@ -1464,7 +1464,7 @@
                                   </ul>
                                 </div>
                               </div>
-                              <div class="_1sv27e6">
+                              <div class="flex-content-center">
                                 <div class="_pd8gea">
                                   <div class="_wjo0ey">
                                     <div
