--- a/places.html
+++ b/places.html
@@ -476,7 +476,7 @@
                                       margin-bottom: 32px;
                                     "
                                   >
-                                    <div class="_5kaapu">
+                                    <div class="flex-items-center">
                                       <div>
                                         <a
                                           href="/users/show/102514441"
@@ -17101,7 +17101,7 @@
                                   </ul>
                                 </div>
                               </div>
-                              <div class="_1sv27e6">
+                              <div class="flex-content-center">
                                 <div class="_pd8gea">
                                   <div class="_wjo0ey">
                                     <div
