--- a/preferences.html
+++ b/preferences.html
@@ -580,7 +580,7 @@
                                   </div>
                                 </div>
                                 <div class="_xoikn">
-                                  <div class="_5kaapu">
+                                  <div class="flex-items-center">
                                     <div>
                                       <span
                                         id="auto_translate_switch"
@@ -665,7 +665,7 @@
                                   </div>
                                 </div>
                                 <div class="_xoikn">
-                                  <div class="_5kaapu">
+                                  <div class="flex-items-center">
                                     <div>
                                       <span
                                         id="auto_translate_switch"
@@ -3716,7 +3716,7 @@
                                   </ul>
                                 </div>
                               </div>
-                              <div class="_1sv27e6">
+                              <div class="flex-content-center">
                                 <div class="_pd8gea">
                                   <div class="_wjo0ey">
                                     <div
