--- a/products.html
+++ b/products.html
@@ -7471,7 +7471,7 @@
                                             </ul>
                                           </div>
                                         </div>
-                                        <div class="_1sv27e6">
+                                        <div class="flex-content-center">
                                           <div class="_pd8gea">
                                             <div class="_wjo0ey">
                                               <div
@@ -8562,7 +8562,7 @@
                                                             class="_1e5q4qoz"
                                                           >
                                                             <div
-                                                              class="_5kaapu"
+                                                              class="flex-items-center"
                                                             >
                                                               <span
                                                                 class="_14tkmhr"
@@ -8608,7 +8608,7 @@
                                                           >
                                                             <div
                                                               aria-hidden="true"
-                                                              class="_5kaapu"
+                                                              class="flex-items-center"
                                                             >
                                                               <span
                                                                 class="_14tkmhr"
@@ -9002,7 +9002,7 @@
                                                         type="button"
                                                         class="_1ju7xj0j"
                                                       >
-                                                        <div class="_5kaapu">
+                                                        <div class="flex-items-center">
                                                           <svg
                                                             viewBox="0 0 16 16"
                                                             xmlns="http://www.w3.org/2000/svg"
@@ -20996,7 +20996,7 @@
                                           </ul>
                                         </div>
                                       </div>
-                                      <div class="_1sv27e6">
+                                      <div class="flex-content-center">
                                         <div class="_pd8gea">
                                           <div class="_wjo0ey">
                                             <div
