--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -270,15 +270,15 @@
                               </div>
                               <div class="_e296pg">
                                 <div class="_1okh7pi0">
-                                  <div class="_12d0llg5">
-                                    <div class="_qo24lwc">
+                                  <div class="flex-bar">
+                                    <div class="flex-bar-item-grow">
                                       <span class="_czm8crp"
                                         ><div class="_1p3joamp">
                                           Company
                                         </div></span
                                       >
                                     </div>
-                                    <div class="_1iti0ju">
+                                    <div class="flex-bar-item">
                                       <span class="_czm8crp"
                                         ><a
                                           href="/users/settings"
@@ -668,15 +668,15 @@
                                 <div class="_2h22gn">
                                   <div class="_169grxv2">
                                     <div class="_1okh7pi0">
-                                      <div class="_12d0llg5">
-                                        <div class="_qo24lwc">
+                                      <div class="flex-bar">
+                                        <div class="flex-bar-item-grow">
                                           <span class="_czm8crp"
                                             ><div class="_1p3joamp">
                                               Company
                                             </div></span
                                           >
                                         </div>
-                                        <div class="_1iti0ju">
+                                        <div class="flex-bar-item">
                                           <span class="_czm8crp"
                                             ><a
                                               href="/users/settings"
@@ -1262,7 +1262,7 @@
                                   </ul>
                                 </div>
                               </div>
-                              <div class="_1sv27e6">
+                              <div class="flex-content-center">
                                 <div class="_pd8gea">
                                   <div class="_wjo0ey">
                                     <div
