--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -740,7 +740,7 @@
                           class="_18gze56"
                         >
                           <div class="d-flex">
-                            <div class="_rqfxvmb">
+                            <div class="flex-item">
                               <div style="margin-right: 8px">
                                 <svg
                                   viewBox="0 0 1000 1000"
@@ -760,7 +760,7 @@
                                 </svg>
                               </div>
                             </div>
-                            <div class="_rqfxvmb">
+                            <div class="flex-item">
                               <div>
                                 <div dir="ltr" class="_1rbmiub1">
                                   © 2022 Airbnb, Inc. All rights reserved.
