--- a/reviews.html
+++ b/reviews.html
@@ -42,7 +42,7 @@
                 <div class="_hfnjlw">
                   <header class="_jgtn573">
                     <div class="_1v0rfuj">
-                      <div class="_5kaapu">
+                      <div class="flex-items-center">
                         <div class="_uvp3p0" data-testid="icon">
                           <a href="/" class="_11eqlma4"
                             ><svg
