--- a/specific_trip.html
+++ b/specific_trip.html
@@ -662,7 +662,7 @@
                                                         <div class="_q9rg6">
                                                           <div class="_1k493f6">
                                                             <div
-                                                              class="_zjunba"
+                                                              class="flex-content-between"
                                                             >
                                                               <div
                                                                 class="_1lyyzem"
@@ -909,7 +909,7 @@
                                                   href="/experiences/2038668"
                                                   class="_1vqwgj7k"
                                                   ><div class="_1lny4f1x">
-                                                    <div class="_1qbrhv4">
+                                                    <div class="flex-items-center-content-between">
                                                       <div class="_13248hg">
                                                         <div class="_eh41zz">
                                                           <svg
@@ -980,7 +980,7 @@
                                                   data-testid="avatar-list-row"
                                                 >
                                                   <div>
-                                                    <div class="_1yq0zcs">
+                                                    <div class="flex-items-center-content-between">
                                                       <div>
                                                         <div class="_eg3ilr">
                                                           <h3
@@ -1123,7 +1123,7 @@
                                                   href="https://www.airbnb.com/receipt/RCWPMQRAHT"
                                                   class="_1vqwgj7k"
                                                   ><div class="_1lny4f1x">
-                                                    <div class="_1qbrhv4">
+                                                    <div class="flex-items-center-content-between">
                                                       <div class="_13248hg">
                                                         <div class="_eh41zz">
                                                           <svg
@@ -1281,7 +1281,7 @@
                                                   href="https://www.airbnb.com/online_experiences/join/57429540?confirmation_code=TARYZPXS"
                                                   class="_1vqwgj7k"
                                                   ><div class="_1lny4f1x">
-                                                    <div class="_1qbrhv4">
+                                                    <div class="flex-items-center-content-between">
                                                       <div class="_13248hg">
                                                         <div class="_eh41zz">
                                                           <svg
@@ -1520,7 +1520,7 @@
                                                   href="/experiences/2038668"
                                                   class="_1vqwgj7k"
                                                   ><div class="_1lny4f1x">
-                                                    <div class="_1qbrhv4">
+                                                    <div class="flex-items-center-content-between">
                                                       <div class="_13248hg">
                                                         <div class="_eh41zz">
                                                           <svg
@@ -1574,7 +1574,7 @@
                                                   class="_1ukdbejs"
                                                   data-testid="reservation-host-header-row"
                                                 >
-                                                  <div class="_1qbrhv4">
+                                                  <div class="flex-items-center-content-between">
                                                     <div class="_149pqlo">
                                                       <div class="_1f4mp40">
                                                         <h2
@@ -1646,7 +1646,7 @@
                                                   href="/messaging/thread/1202977220"
                                                   class="_1vqwgj7k"
                                                   ><div class="_1lny4f1x">
-                                                    <div class="_1qbrhv4">
+                                                    <div class="flex-items-center-content-between">
                                                       <div class="_13248hg">
                                                         <div class="_eh41zz">
                                                           <svg
@@ -1743,7 +1743,7 @@
                                                   href="https://www.airbnb.com/receipt/RCWPMQRAHT"
                                                   class="_1vqwgj7k"
                                                   ><div class="_1lny4f1x">
-                                                    <div class="_1qbrhv4">
+                                                    <div class="flex-items-center-content-between">
                                                       <div class="_13248hg">
                                                         <div class="_eh41zz">
                                                           <svg
@@ -1932,7 +1932,7 @@
                                                   href="/messaging/thread/1202977220"
                                                   class="_1vqwgj7k"
                                                   ><div class="_1lny4f1x">
-                                                    <div class="_1qbrhv4">
+                                                    <div class="flex-items-center-content-between">
                                                       <div class="_13248hg">
                                                         <div class="_eh41zz">
                                                           <svg
@@ -6071,7 +6071,7 @@
                                   </ul>
                                 </div>
                               </div>
-                              <div class="_1sv27e6">
+                              <div class="flex-content-center">
                                 <div class="_pd8gea">
                                   <div class="_wjo0ey">
                                     <div
