--- a/submission/review.html
+++ b/submission/review.html
@@ -1068,7 +1068,7 @@
                             </div>
                             <div>
                               <div class="_1rn3mv3">
-                                <div class="_5kaapu">
+                                <div class="flex-items-center">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1140,7 +1140,7 @@
                                 </div>
                               </div>
                               <div class="_1rn3mv3">
-                                <div class="_5kaapu">
+                                <div class="flex-items-center">
                                   <svg
                                     viewBox="0 0 16 16"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1212,7 +1212,7 @@
                                 </div>
                               </div>
                               <div class="_1rn3mv3">
-                                <div class="_5kaapu">
+                                <div class="flex-items-center">
                                   <svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
