--- a/transaction_history.html
+++ b/transaction_history.html
@@ -489,8 +489,8 @@
                               </div>
                             </div>
                           </div>
-                          <div class="_12d0llg5">
-                            <div class="_qo24lwc">
+                          <div class="flex-bar">
+                            <div class="flex-bar-item-grow">
                               <div style="margin-bottom: 8px">
                                 <section>
                                   <h1
@@ -505,7 +505,7 @@
                                 </section>
                               </div>
                             </div>
-                            <div class="_1iti0ju">
+                            <div class="flex-bar-item">
                               <div style="margin-bottom: 8px"></div>
                             </div>
                           </div>
@@ -1158,15 +1158,15 @@
                                             margin-right: 16px;
                                           "
                                         >
-                                          <div class="_12d0llg5">
-                                            <div class="_qo24lwc">
+                                          <div class="flex-bar">
+                                            <div class="flex-bar-item-grow">
                                               <span class="_1p0spma2"
                                                 >Paid Out: </span
                                               ><span class="_h6avcp2"
                                                 >0.00</span
                                               >
                                             </div>
-                                            <div class="_1iti0ju">
+                                            <div class="flex-bar-item">
                                               <span class="_19dlwp2d"
                                                 ><div>
                                                   <button
@@ -1176,7 +1176,7 @@
                                                     aria-expanded="false"
                                                     aria-busy="false"
                                                   >
-                                                    <div class="_5kaapu">
+                                                    <div class="flex-items-center">
                                                       <div>Export CSV</div>
                                                       <div
                                                         style="margin-left: 8px"
