--- a/account-notifications.html
+++ b/account-notifications.html
@@ -2111,7 +2111,7 @@
                                   </ul>
                                 </div>
                               </div>
-                              <div class="_1sv27e6">
+                              <div class="flex-content-center">
                                 <div class="_pd8gea">
                                   <div class="_wjo0ey">
                                     <div
