--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -1208,7 +1208,7 @@
                                   </ul>
                                 </div>
                               </div>
-                              <div class="_1sv27e6">
+                              <div class="flex-content-center">
                                 <div class="_pd8gea">
                                   <div class="_wjo0ey">
                                     <div
