--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -312,7 +312,7 @@
                     </div>
                   </div>
                   <div class="_fwc96">
-                    <div class="_5kaapu">
+                    <div class="flex-items-center">
                       <div class="_1w3zdzk">
                         <button
                           class="_o0rqv1"
@@ -459,7 +459,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                 </div>
                 <div class="_1px78l2">
                   <div class="_11go4zx">
-                    <div class="_5kaapu">
+                    <div class="flex-items-center">
                       <span class="a8jt5op dir dir-ltr"
                         >Your progress: step 8 out of 10.</span
                       >
