--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -309,7 +309,7 @@
                     </div>
                   </div>
                   <div class="_fwc96">
-                    <div class="_5kaapu">
+                    <div class="flex-items-center">
                       <div class="_1w3zdzk">
                         <button
                           class="_o0rqv1"
@@ -594,7 +594,7 @@
                 </div>
                 <div class="_1px78l2">
                   <div class="_11go4zx">
-                    <div class="_5kaapu">
+                    <div class="flex-items-center">
                       <span class="a8jt5op dir dir-ltr"
                         >Your progress: step 9 out of 10.</span
                       >
