--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -307,7 +307,7 @@
                     </div>
                   </div>
                   <div class="_fwc96">
-                    <div class="_5kaapu">
+                    <div class="flex-items-center">
                       <div class="_1w3zdzk">
                         <button
                           class="_o0rqv1"
@@ -452,7 +452,7 @@ Cheerful private villa with pool</textarea
                 </div>
                 <div class="_1px78l2">
                   <div class="_11go4zx">
-                    <div class="_5kaapu">
+                    <div class="flex-items-center">
                       <span class="a8jt5op dir dir-ltr"
                         >Your progress: step 7 out of 10.</span
                       >
