--- a/inbox.html
+++ b/inbox.html
@@ -133,7 +133,7 @@
         display: -webkit-flex !important;
         display: flex !important;
       }
-      ._rqfxvmb {
+      .flex-item {
         -ms-grid-row-align: center !important;
         -ms-flex-item-align: center !important;
         display: -webkit-inline-box !important;
@@ -483,7 +483,7 @@
         content: '' !important;
         margin-bottom: 56px !important;
       }
-      ._t0tx82 {
+      .flex-grow-1 {
         -webkit-box-flex: 1 !important;
         -ms-flex-positive: 1 !important;
         -webkit-flex-grow: 1 !important;
@@ -1484,7 +1484,7 @@
         white-space: nowrap !important;
         width: 1px !important;
       }
-      ._5kaapu {
+      .flex-items-center {
         -webkit-box-align: center !important;
         -ms-flex-align: center !important;
         display: -webkit-box !important;
@@ -7278,7 +7278,7 @@
                         <button class="_bzfhend" type="button">
                           <span class="_vwled5" aria-hidden="true"
                             ><div class="d-flex">
-                              <div class="_rqfxvmb">
+                              <div class="flex-item">
                                 <div style="margin-right: 0">
                                   <svg
                                     viewBox="0 0 1000 1000"
@@ -7298,7 +7298,7 @@
                                   </svg>
                                 </div>
                               </div>
-                              <div class="_rqfxvmb">
+                              <div class="flex-item">
                                 <div></div>
                               </div></div></span
                           ><span class="a8jt5op dir dir-ltr"
@@ -7462,7 +7462,7 @@
                           </div>
                           <div class="_ymw09o">
                             <div class="_17c3r99"></div>
-                            <div class="_t0tx82">
+                            <div class="flex-grow-1">
                               <div class="_q5x9z0" data-testid="folder-subnav">
                                 <section class="_13jnc9w">
                                   <header>
@@ -7571,7 +7571,7 @@
                                     </ul>
                                   </div>
                                 </section>
-                                <div class="_t0tx82"></div>
+                                <div class="flex-grow-1"></div>
                               </div>
                             </div>
                           </div>
@@ -7674,7 +7674,7 @@
                                   </button>
                                 </div>
                                 <div class="_zdbrn">
-                                  <div class="_5kaapu">
+                                  <div class="flex-items-center">
                                     <div class="_96f3qb">
                                       <div class="_1t1bu9s">
                                         <div class="_1a488ly">
@@ -7769,7 +7769,7 @@
                                       id="unread_pill-DLS-chipGroup-label"
                                     ></div>
                                     <button class="_1dsyi2c" type="button">
-                                      <div class="_5kaapu">
+                                      <div class="flex-items-center">
                                         <div class="_vaj62s">
                                           <svg
                                             viewBox="0 0 24 24"
@@ -7792,7 +7792,7 @@
                                         New messages
                                       </div>
                                       <span aria-hidden="true" class="_1vwho579"
-                                        ><div class="_5kaapu">
+                                        ><div class="flex-items-center">
                                           <div class="_vaj62s">
                                             <svg
                                               viewBox="0 0 24 24"
@@ -8333,7 +8333,7 @@
                                             </h3>
                                             <div class="_18na6be">
                                               <div class="_1f6woba">
-                                                <div class="_bc4egv">
+                                                <div class="flex-1">
                                                   <div
                                                     data-testid="base-registry-wrapper-spacing"
                                                     style="margin: 10px 22px"
@@ -8440,7 +8440,7 @@
                                           >
                                             <div class="_18na6be">
                                               <div class="_1f6woba">
-                                                <div class="_bc4egv">
+                                                <div class="flex-1">
                                                   <div
                                                     data-testid="base-registry-wrapper-spacing"
                                                     style="
@@ -8545,7 +8545,7 @@
                                           >
                                             <div class="_18na6be">
                                               <div class="_1f6woba">
-                                                <div class="_bc4egv">
+                                                <div class="flex-1">
                                                   <div
                                                     data-testid="base-registry-wrapper-spacing"
                                                     style="
@@ -8653,7 +8653,7 @@
                                           >
                                             <div class="_18na6be">
                                               <div class="_1f6woba">
-                                                <div class="_bc4egv">
+                                                <div class="flex-1">
                                                   <div
                                                     data-testid="base-registry-wrapper-spacing"
                                                     style="
