--- a/invite-friends.html
+++ b/invite-friends.html
@@ -608,7 +608,7 @@
                             </ul>
                           </div>
                         </div>
-                        <div class="_1sv27e6">
+                        <div class="flex-content-center">
                           <div class="_pd8gea">
                             <div class="_wjo0ey">
                               <div class="footer__copyright-text" dir="ltr">
