--- a/profile.html
+++ b/profile.html
@@ -431,7 +431,7 @@
                                           type="button"
                                           class="_fk5awq5"
                                         >
-                                          <div class="_5kaapu">
+                                          <div class="flex-items-center">
                                             <span class="_1lz166q"
                                               ><svg
                                                 viewBox="0 0 32 32"
@@ -461,7 +461,7 @@
                                           type="button"
                                           class="_fk5awq5"
                                         >
-                                          <div class="_5kaapu">
+                                          <div class="flex-items-center">
                                             <span class="_1lz166q"
                                               ><svg
                                                 viewBox="0 0 32 32"
@@ -676,7 +676,7 @@
                                               type="button"
                                               class="_fk5awq5"
                                             >
-                                              <div class="_5kaapu">
+                                              <div class="flex-items-center">
                                                 <span class="_1lz166q"
                                                   ><svg
                                                     viewBox="0 0 32 32"
@@ -706,7 +706,7 @@
                                               type="button"
                                               class="_fk5awq5"
                                             >
-                                              <div class="_5kaapu">
+                                              <div class="flex-items-center">
                                                 <span class="_1lz166q"
                                                   ><svg
                                                     viewBox="0 0 32 32"
@@ -1401,7 +1401,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                           >
                                             <span class="_1gvh1f5"
                                               ><div
-                                                class="_5kaapu"
+                                                class="flex-items-center"
                                                 id="review-section-title"
                                               >
                                                 <div class="_14tkmhr">
@@ -1591,7 +1591,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     type="button"
                                     class="_fk5awq5"
                                   >
-                                    <div class="_5kaapu">
+                                    <div class="flex-items-center">
                                       <span class="_1lz166q"
                                         ><svg
                                           viewBox="0 0 32 32"
@@ -1619,7 +1619,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     type="button"
                                     class="_fk5awq5"
                                   >
-                                    <div class="_5kaapu">
+                                    <div class="flex-items-center">
                                       <span class="_1lz166q"
                                         ><svg
                                           viewBox="0 0 32 32"
@@ -1829,7 +1829,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         type="button"
                                         class="_fk5awq5"
                                       >
-                                        <div class="_5kaapu">
+                                        <div class="flex-items-center">
                                           <span class="_1lz166q"
                                             ><svg
                                               viewBox="0 0 32 32"
@@ -1859,7 +1859,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         type="button"
                                         class="_fk5awq5"
                                       >
-                                        <div class="_5kaapu">
+                                        <div class="flex-items-center">
                                           <span class="_1lz166q"
                                             ><svg
                                               viewBox="0 0 32 32"
@@ -2550,7 +2550,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     >
                                       <span class="_1gvh1f5"
                                         ><div
-                                          class="_5kaapu"
+                                          class="flex-items-center"
                                           id="review-section-title"
                                         >
                                           <div class="_14tkmhr">
@@ -3022,7 +3022,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                   </ul>
                                 </div>
                               </div>
-                              <div class="_1sv27e6">
+                              <div class="flex-content-center">
                                 <div class="_pd8gea">
                                   <div class="_wjo0ey">
                                     <div
