--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -466,7 +466,7 @@
                                     class="d-flex"
                                     style="justify-content: center"
                                   >
-                                    <div class="_rqfxvmb">
+                                    <div class="flex-item">
                                       <div style="margin-right: 12px">
                                         <svg
                                           viewBox="0 0 24 24"
@@ -486,7 +486,7 @@
                                         </svg>
                                       </div>
                                     </div>
-                                    <div class="_rqfxvmb">
+                                    <div class="flex-item">
                                       <div>Confirm and pay</div>
                                     </div>
                                   </div></span
